@@ -10,3 +10,14 @@ sidap be renamed to cytofkit
   - updated GUI 
   - added a shiny APP to access the results interactively
   - updated vignettes 
+  
+
+04/03/2016 cytofkit 1.2.2 updates:
+  - removed comp parameter in cytofkit-function
+  - change parameter comp to ifCompensation in cytofkit-function
+  - adjust the order of parameters in cytofkit-funciton
+  
+
+04/03/2016 cytofkit 1.2.3 updates:
+  - updated the shiny APP, heatmap scale, plot with selection of all markers
+  - save a copy of expression with all markers
